# roca

./: Cargo.toml  README.md  architecture.md
examples/: template_builder.rs  user_info.rs  user_management.rs
src/: client.rs  controller.rs  lib.rs  template.rs  user.rs  vm.rs  vm_pool.rs
src/common/: errors.rs  getters.rs  mod.rs  parameters.rs  permissions.rs  resource.rs  resource_getters.rs  resource_macros.rs  resource_methods.rs  resource_pool.rs  template.rs  template_builder.rs  template_elements.rs  template_getters.rs  template_mut.rs
src/common/template/: builder.rs  elements.rs  errors.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/common/template_fmt/: errors.rs  lex.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/common/xml/: mod.rs  permissions.rs  resource.rs  shared_getters.rs  template.rs  template_mut.rs
