[package]
name = "roca"
version = "0.1.0"
authors = ["Christian González <cgonzalez@opennebula.systems>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_xmlrpc = "0.1"
sxd-xpath = "0.4"
sxd-document = "0.3"

# Used by the default client
reqwest = { version= "0.11", features = ["blocking"] }