[package]
name = "roca"
version = "0.1.0"
authors = ["Christian González <cgonzalez@opennebula.systems>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_xmlrpc = "0.1"
xml-doc = "0.2"

# Used by the default client
reqwest = { version= "0.11", features = ["blocking"] }

[profile.dev]
debug-assertions=false